fixed about page overlap

--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -229,10 +229,10 @@ h1::before{
 
 .flexmain{
   display: flex;
-  width: 65vw;
+  width: 75vw;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+  height: 65vh;
   text-align: center;
   flex-direction: column;
   padding-top: 2em;
@@ -242,7 +242,7 @@ h1::before{
 .flexmain h2{
   display: inline-block;
   padding: 0% 5% 0% 5%;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 .obvious{
@@ -285,7 +285,8 @@ padding:0
   }
 
 .flexmain{
-    width: 50vw;
+    width: 45vw;
+    font-size: 1.2em;
 }
 
   .menu{
